# pyredis

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  redis_client.py  run-redis.sh
.demo/: demo.tape
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: RESP_API.md  blocking.py  config.py  exceptions.py  handler.py  main.py  rdb.py  replica_manager.py  replication.py  server.py  transaction.py
app/commands/: README.md  __init__.py  base.py  blpop.py  discard.py  echo.py  exec.py  get.py  incr.py  info.py  llen.py  lpop.py  lpush.py  lrange.py  multi.py  ping.py  psync.py  replconf.py  rpush.py  set.py  type.py  wait.py  xadd.py  xinfo.py  xrange.py  xread.py
app/resp/: __init__.py  protocol.py
app/storage/: README.md  __init__.py  base.py  memory.py  types.py
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md
tests/: README.md  __init__.py  conftest.py  helpers.py  test_resp_parser.py
tests/integration/: __init__.py  conftest.py  test_basic_commands.py  test_blpop_notifications.py  test_blpop_timeout.py  test_discard.py  test_error_handling.py  test_exec.py  test_incr.py  test_info.py  test_list_commands.py  test_multi.py  test_psync.py  test_replconf.py  test_replconf_offset.py  test_replica_processing.py  test_replication_integration.py  test_storage_commands.py  test_ttl.py  test_type.py  test_wait_integration.py  test_wait_with_replicas.py  test_xadd.py  test_xinfo.py  test_xrange.py  test_xread.py
tests/unit/: conftest.py  test_autogen_ids.py  test_blpop.py  test_discard.py  test_exec.py  test_get.py  test_handler.py  test_incr.py  test_info.py  test_llen.py  test_lpop.py  test_lpush.py  test_lrange.py  test_multi.py  test_offset_rules.py  (+12 more)
(+8 files in other folders)
